# crypto-disco

./: .gitignore  README.md  assets.qrc  pysidedeploy.spec  setup.py
src/: New-ISOFile-Runner.ps1  app.py  assets.py  burn.py  compute_ecc.py  compute_repair.py  config.py  ecc.py  gui.py  iso.py  playback_iso.py  print_template.py  pyproject.toml  repair.py  requirements.txt  test.py  unzip.py  utils.py  visualization.py  zip.py
