[project]
name = "crypto-disco"
readme = "README.md"
version = "1a"
dependencies = [
    "reedsolo==2.1.1b1",
    "unireedsolomon",
    "pycdlib",
    "PySide6",
    "imageio",
    "pip"
]

[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

# https://docs.astral.sh/uv/reference/settings/#pip_config-settings-package
[tool.uv.pip]
config-settings-package = { reedsolo = { --build-option = "--cythonize" } }

[tool.pyside6-project]
files = ["app.py", "ecc.py", "compute_ecc.py", "gui.py", "iso.py", "assets.py", "utils.py"]